# cpp-template

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitmodules  CMakeLists.txt
cmake/: CMakeHelpers.cmake  CompilerWarnings.cmake  Sanitizers.cmake
ext/: CMakeLists.txt
src/: CMakeLists.txt  header.h  helper_string.h  implot_glfw.cpp  library.cc  library.h  library_bench.cc  library_test.cc  main.cc
src/cuda/: CMakeLists.txt  helper_cuda.h  vector_add.cu
src/gui/: CMakeLists.txt  imgui_opengl3_glfw.cpp  imnodes_glfw_opengl3.cpp  implot_glfw.cpp  node_editor.cpp
